Sun Jul 12 16:40:06 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkargcollector.c (gtk_arg_collect_value): fix float argument
	collection (always casted to doubles upon argument passing).

Sun Jul 12 05:59:26 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtktypeutils.c (gtk_type_new): call the base classes'
 	object_init_func for derived objects with the object's ->klass field
 	still pointing to the corresponding base class, otherwise overridden
 	class functions could get called with partly-initialized objects.
	(change from Tero Pulkkinen <terop@modeemi.cs.tut.fi>).

Sun Jul 12 02:47:35 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkobject.h:
	* gtk/gtkobject.c:
 	(gtk_object_arg_get_info): new functions which wraps gtk_arg_get_info().

	* gtk/gtkcontainer.h:
	* gtk/gtkcontainer.c:
 	(gtk_container_child_arg_get_info): new function which wraps
 	gtk_arg_get_info().

Fri Jul 10 13:29:53 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkcontainer.c:
	(gtk_container_arg_get): 
	(gtk_container_arg_set): 
	* gtk/gtkobject.c:
	(gtk_object_arg_set): 
	(gtk_object_arg_get):
	strictly check for the associated get/set arg functions. if an
	arg is readable or writable, the associated class functions *must*
	be provided.

Fri Jul 10 09:37:50 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkaccellabel.c (gtk_accel_label_accelerator_width): only take the
 	padding into account if there is an accelerator.

Fri Jul 10 05:51:44 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkcontainer.c:
 	(gtk_container_add_with_args): collect the arguments with
 	gtk_container_child_args_collect, not through gtk_object_args_collect.
	(gtk_container_child_set): likewise.

Fri Jul 10 04:20:35 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtktypeutils.h: 
	* gtk/gtktypeutils.c: added a new internal type GTK_TYPE_IDENTIFIER
	which is derived from GTK_TYPE_STRING.

	* gtk/gtkbindings.c: reworked the argument type handling.

Thu Jul  9 21:03:19 CDT 1998 Shawn T. Amundson <amundson@gtk.org>
