@@ -1,3 +1,9 @@
+Mon Jul 13 12:42:51 1998  George Lebl  <jirka@5z.com>
+
+	* gdk/gdkwindow.h: (gdk_window_reparent) check if old_parent_private
+	  is not NULL before trying to g_list_remove the child. A patch
+	  from Michael Lausch.
+
 Sun Jul 12 16:40:06 1998  Tim Janik  <timj@gtk.org>
 
 	* gtk/gtkargcollector.c (gtk_arg_collect_value): fix float argument
